Adds letsencrypt email input and fixes contour clusterrole
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/demo/config.jsonnet.dist
+++ b/demo/config.jsonnet.dist
@@ -1,3 +1,4 @@
 (import './manifests/main.jsonnet') {
   base_domain: 'kubernetes.example.net',
+  letsencrypt_contact_email:: 'example@example.com',
 }
