--- a/demo/yaml/kube-oidc-proxy.yaml
+++ b/demo/yaml/kube-oidc-proxy.yaml
@@ -28,7 +28,7 @@ spec:
         app: kube-oidc-proxy
     spec:
       containers:
-      - image: gcr.io/jetstack-josh/kube-oidc-proxy
+      - image: quay.io/jetstack/kube-oidc-proxy
         ports:
         - containerPort: 443
         - containerPort: 8080
@@ -109,7 +109,27 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: kube-oidc-proxy
 subjects:
 - kind: User
   name: system:serviceaccount:kube-oidc-proxy:default
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kube-oidc-proxy
+rules:
+- apiGroups:
+  - ""
+  resources:
+  - "users"
+  - "groups"
+  - "serviceaccounts"
+  verbs:
+  - "impersonate"
+- apiGroups:
+  - "authentication.k8s.io"
+  resources:
+  - "userextras/scopes"
+  verbs:
+  - "impersonate"
