--- a/demo/yaml/secrets.yaml
+++ b/demo/yaml/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  tls.crt: SERVING_TLS_CERT
-  tls.key: SERVING_TLS_KEY
+  tls.crt: {{ SERVING_TLS_CERT }}
+  tls.key: {{ SERVING_TLS_KEY }}
 kind: Secret
 metadata:
   name: kube-oidc-proxy-serving
@@ -10,10 +10,10 @@ type: kubernetes.io/tls
 ---
 apiVersion: v1
 data:
-  oidc.ca-pem:
-  oidc.issuer-url:
-  oidc.username-claim:
-  oidc.client-id:
+  oidc.ca-pem: {{ OIDC_CA }}
+  oidc.issuer-url: {{ OIDC_ISSUER_URL }}
+  oidc.username-claim: {{ OIDC_USERNAME_CLAIM }}
+  oidc.client-id: {{ OIDC_CLIENT_ID }}
 kind: Secret
 metadata:
   name: kube-oidc-proxy-config
