Adds eks cluster modules
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -1,6 +1,6 @@
 # Copyright Jetstack Ltd. See LICENSE for details.
 BINDIR ?= $(CURDIR)/bin
-CLOUD  := google
+CLOUD  ?= google
 
 KUBECONFIG := $(CURDIR)/.kubeconfig-$(CLOUD)
 
