Updates the quick start guide
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/demo/yaml/secrets.yaml
+++ b/demo/yaml/secrets.yaml
@@ -4,7 +4,7 @@ data:
   tls.key: {{ SERVING_TLS_KEY }}
 kind: Secret
 metadata:
-  name: kube-oidc-proxy-serving
+  name: kube-oidc-proxy-tls
   namespace: kube-oidc-proxy
 type: kubernetes.io/tls
 ---
