--- a/demo/yaml/kube-oidc-proxy.yaml
+++ b/demo/yaml/kube-oidc-proxy.yaml
@@ -28,7 +28,7 @@ spec:
         app: kube-oidc-proxy
     spec:
       containers:
-      - image: quay.io/jetstack/kube-oidc-proxy
+      - image: quay.io/jetstack/kube-oidc-proxy:0.1.0
         ports:
         - containerPort: 443
         - containerPort: 8080
@@ -38,6 +38,7 @@ spec:
           initialDelaySeconds: 5
           periodSeconds: 10
         name: kube-oidc-proxy
+        command: ["kube-oidc-proxy"]
         args:
           - "--secure-port=443"
           - "--tls-cert-file=/etc/oidc/tls/crt.pem"
