Use v0.1.0 instead of 0.1.0
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/demo/yaml/kube-oidc-proxy.yaml
+++ b/demo/yaml/kube-oidc-proxy.yaml
@@ -28,7 +28,7 @@ spec:
         app: kube-oidc-proxy
     spec:
       containers:
-      - image: quay.io/jetstack/kube-oidc-proxy:0.1.0
+      - image: quay.io/jetstack/kube-oidc-proxy:v0.1.0
         ports:
         - containerPort: 443
         - containerPort: 8080
