--- a/demo/yaml/kube-oidc-proxy.yaml
+++ b/demo/yaml/kube-oidc-proxy.yaml
@@ -34,7 +34,8 @@ spec:
         - containerPort: 443
         - containerPort: 8080
         readinessProbe:
-          tcpSocket:
+          httpGet:
+            path: /ready
             port: 8080
           initialDelaySeconds: 5
           periodSeconds: 10
