Correct the template for the secrets
If the values were not provided by the user, the resulting base64
encoded default value was just an empty string.  Since the values were not
wrapped in quotes, this would be interpreted as a nil value and throw errors.

Signed-off-by: Daniel Herman <dherman@factset.com>

--- a/deploy/charts/kube-oidc-proxy/templates/secret_config.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/secret_config.yaml
@@ -6,12 +6,24 @@ data:
   oidc.issuer-url: {{ .Values.oidc.issuerUrl | b64enc }}
   oidc.username-claim: {{ .Values.oidc.usernameClaim | b64enc }}
   oidc.client-id: {{ .Values.oidc.clientId | b64enc }}
-  oidc.username-prefix: {{ .Values.oidc.usernamePrefix | default "" | b64enc }}
-  oidc.groups-claim: {{ .Values.oidc.groupsClaim | default "" | b64enc }}
-  oidc.groups-prefix: {{ .Values.oidc.groupsPrefix | default "" | b64enc }}
-  oidc.signing-algs: {{ join "," .Values.oidc.signingAlgs | default "" | b64enc }}
+  {{- if .Values.oidc.usernamePrefix }}
+  oidc.username-prefix: {{ .Values.oidc.usernamePrefix | b64enc }}
+  {{- end }}
+  {{- if .Values.oidc.groupsClaim }}
+  oidc.groups-claim: {{ .Values.oidc.groupsClaim | b64enc }}
+  {{- end }}
+  {{- if .Values.oidc.groupsPrefix }}
+  oidc.groups-prefix: {{ .Values.oidc.groupsPrefix | b64enc }}
+  {{- end }}
+  {{- if .Values.oidc.signingAlgs }}
+  oidc.signing-algs: {{ join "," .Values.oidc.signingAlgs | b64enc }}
+  {{- end }}
+  {{ if .Values.oidc.requiredClaims }}
   oidc.required-claims: {{ include "requiredClaims" . | b64enc }}
-  api-audiences: {{ join "," .Values.oidc.apiAudiences | default "" | b64enc }}
+  {{- end }}
+  {{- if .Values.oidc.apiAudiences -}}
+  api-audiences: {{ join "," .Values.oidc.apiAudiences | b64enc }}
+  {{- end }}
 kind: Secret
 metadata:
   name: {{ include "kube-oidc-proxy.fullname" . }}-config
