Fix e2e tests for all passing
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/demo/yaml/kube-oidc-proxy.yaml
+++ b/demo/yaml/kube-oidc-proxy.yaml
@@ -135,5 +135,7 @@ rules:
   - "authentication.k8s.io"
   resources:
   - "userextras/scopes"
+  - "tokenreviews"
   verbs:
+  - "create"
   - "impersonate"
