--- a/deploy/charts/kube-oidc-proxy/values.yaml
+++ b/deploy/charts/kube-oidc-proxy/values.yaml
@@ -16,6 +16,10 @@ fullnameOverride: ""
 service:
   type: ClusterIP
   port: 443
+  annotations:
+    # You can use this field to add annotations to the Service.
+    # Define it in a key-value pairs. E.g.
+    # service.beta.kubernetes.io/aws-load-balancer-internal: true
 
 tls:
   # `secretName` must be a name of Secret of TLS type. If not provided a
