--- a/deploy/charts/kube-oidc-proxy/values.yaml
+++ b/deploy/charts/kube-oidc-proxy/values.yaml
@@ -68,6 +68,11 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+# Enable Pod Disruption Budget
+podDisruptionBudget:
+  enabled: false
+  minAvailable: 1
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
