Remove `--update` to apk in Dockerfiles
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/test/tools/audit-webhook/Dockerfile
+++ b/test/tools/audit-webhook/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3.10
 
 LABEL description="A audit webhook sink to read audit events and write to file."
 
-RUN apk --no-cache --update add ca-certificates
+RUN apk --no-cache add ca-certificates
 
 COPY ./bin/audit-webhook /usr/bin/audit-webhook
 
