--- a/test/tools/fake-apiserver/Dockerfile
+++ b/test/tools/fake-apiserver/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3.10
 
 LABEL description="A fake API server that will respond to requests with the same body and headers."
 
-RUN apk --no-cache --update add ca-certificates
+RUN apk --no-cache add ca-certificates
 
 COPY ./bin/fake-apiserver-linux /usr/bin/fake-apiserver
 
