--- a/test/tools/issuer/Dockerfile
+++ b/test/tools/issuer/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3.10
 
 LABEL description="A basic OIDC issuer that prsents a well-known and certs endpoint."
 
-RUN apk --no-cache --update add ca-certificates
+RUN apk --no-cache add ca-certificates
 
 COPY ./bin/oidc-issuer-linux /usr/bin/oidc-issuer
 
