--- a/deploy/charts/kube-oidc-proxy/templates/service.yaml
+++ b/deploy/charts/kube-oidc-proxy/templates/service.yaml
@@ -10,6 +10,13 @@ metadata:
     {{- end }}
 spec:
   type: {{ .Values.service.type }}
+{{- if .Values.service.loadBalancerIP }}
+  loadBalancerIP: "{{ .Values.service.loadBalancerIP }}"
+{{- end }}
+{{- if .Values.service.loadBalancerSourceRanges }}
+  loadBalancerSourceRanges:
+{{ toYaml .Values.service.loadBalancerSourceRanges | indent 4 }}
+{{- end }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: 443
