Updates helm chart version to 0.3.0 and add joshvanl to maintainer
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/deploy/charts/kube-oidc-proxy/Chart.yaml
+++ b/deploy/charts/kube-oidc-proxy/Chart.yaml
@@ -3,6 +3,7 @@ appVersion: "v0.3.0"
 description: A Helm chart for kube-oidc-proxy
 home: https://github.com/jetstack/kube-oidc-proxy
 name: kube-oidc-proxy
-version: 0.1.0
+version: 0.3.0
 maintainers:
 - name: mhrabovcin
+- name: joshvanl
